# QR-Reader

./: CHANGELOG  COPYING  README.md  read.py  requirements.txt  setup.cfg
QRReader/: read.py
