[metadata]
name = QRReader
version = attr: QRReader.read.version
url = https://github.com/TheOddZer0/QR-Reader

description = Read content of QR codes, From command line
long_description = file: README.md
long_description_content_type = text/x-markdown

author = TheOddZer0

license = Apache Software License 2.0
license_file = COPYING

[options]
packages = QRReader

[options.entry_points]
console_scripts =
	qr-reader = QRReader.read:main

install_requires =
    pillow >= 8.1.0
    pyzbar >= 0.1.8 
